# SwingTrader

./: .gitignore  ankur-patel-swing-trading-learnings.md  platform-plan.md  swing-trade-picks-july-2026.md  swing-trading-india.md  swing-trading-risk-management-india.md  swing-trading-strategies-india.md  swing-trading-tax-india-2026.md
beginners-guide/: common-mistakes.md  how-to-screen-stocks.md  overview.md  step-1-check-the-market.md  step-2-run-a-scanner.md  step-3-filter-the-junk.md  step-4-read-the-charts.md  step-5-wait-for-trigger.md  step-6-plan-your-exit.md
platform/: README.md
platform/docs/: decisions.md  engineering-standards.md  frontend-standards.md  mvp.md  phase-0-data-spine.md  roadmap.md  schema.md  structure.md  terms.md  user-flow.md
platform/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
platform/web/src/: App.tsx
platform/web/src/components/: AppSidebar.tsx  CandidateTable.tsx  ImportSymbols.tsx  MarketCard.tsx  RoutineList.tsx
platform/web/src/lib/: api.ts  csv.ts  format.ts  pagination.ts  routine.ts  (+3 more)
platform/worker/: .env.example  pyproject.toml
platform/worker/tests/: test_indicators.py  test_regime.py  test_scans_filters.py  test_trade_math.py
platform/worker/worker/: __init__.py  api.py  config.py  db.py  repo.py
platform/worker/worker/compute/: __init__.py  filters.py  indicators.py  regime.py  scans.py  trade_math.py
platform/worker/worker/jobs/: __init__.py  daily.py  ingest.py  lookup.py  screen.py  tag_tiers.py
platform/worker/worker/sources/: __init__.py  nse.py  yahoo.py
(+2 files in other folders)
