[project]
name = "stokebroker-worker"
version = "0.1.0"
description = "Numeric worker for the swing-trading platform: ingest, indicators, scans, trade math"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "yfinance==0.2.51",       # pinned — unofficial scraper, an unpinned bump can break silently (ADR-4)
    "pymongo>=4.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker"]
